feat: add argument normalization, persistent settings, and connection testing
- Add normalizeToolArgs() in content.js: case-insensitive matching of AI
  args against actual HTML form values (select/radio) before execution
- Add persistent localStorage for API key and model selection
- Add 'Save & Test Connection' button to verify OpenRouter connectivity
- Add ensureContentScript() for auto-reinjection on connection loss
- Add tab change listeners to clear stale tool state
- Update system prompt with lowercase enum guidance
- Add CSS for settings UI (border-top, button-row, status-message)

--- a/sidebar.html
+++ b/sidebar.html
@@ -55,8 +55,16 @@
       <div class="form-group">
         <button id="promptBtn" disabled>Send</button>
         <button id="resetBtn" class="secondary" disabled>Reset</button>
-        <button id="apiKeyBtn" class="secondary">Set OpenRouter API key</button>
         <button id="traceBtn" class="secondary">Copy trace</button>
+      </div>
+
+      <div class="form-group border-top">
+        <label for="apiKey">OpenRouter API Key</label>
+        <input type="password" id="apiKey" placeholder="sk-or-v1-..." />
+        <div class="button-row">
+          <button id="saveSettingsBtn" class="secondary">Save & Test Connection</button>
+        </div>
+        <div id="connectionStatus" class="status-message"></div>
       </div>
 
       <pre id="promptResults"></pre>
