Add WMCP inference, AI classifier, and UI updates
Introduce page inference and AI classification plus UI/manifest/background integration. Adds new content scripts (wmcp-inference-engine.js, wmcp-ai-classifier.js, wmcp-merge.js, wmcp-tool-executor.js) and injects them into pages; content.js now always augments tool discovery (native + declarative + inferred), maintains an inferred-tools map, invalidates inference on DOM/SPA navigation, and routes inferred tool executions. Background.js now proxies AI classification requests to OpenRouter (reads API key from chrome.storage.local) and updates the extension badge. openrouter-bridge.js gains retry and empty-response handling and ensures assistant messages are stored safely. Sidebar UI updated: new security confirmation dialog, richer tool table with source badges, confidence bars, source-prefixed dropdown entries, and sync of API key/model to chrome.storage. manifest.json updated for content script runAt and storage permission/version bump. styles.css includes badge, confidence bar and dialog styles. Overall this commit integrates automated inference + AI refinement into the tool pipeline and adds UX safeguards for inferred/mutation-tier actions.

--- a/sidebar.html
+++ b/sidebar.html
@@ -109,6 +109,19 @@
       <pre id="toolResults"></pre>
     </div>
   </div>
+
+  <!-- Security confirmation dialog for mutation-tier inferred tools -->
+  <dialog id="securityDialog" class="security-dialog">
+    <div class="dialog-body">
+      <p class="dialog-title">⚠️ <span id="dialogToolName"></span></p>
+      <p class="dialog-desc" id="dialogDesc"></p>
+      <div class="dialog-actions">
+        <button id="dialogCancel" class="btn-cancel">Cancel</button>
+        <button id="dialogConfirm" class="btn-danger">Execute</button>
+      </div>
+    </div>
+  </dialog>
+
   <script type="module" src="sidebar.js"></script>
 </body>
 
