feat: enhanced page context with full text + screenshot, multi-step tool execution
- Enhanced extractPageContext() with pageText (8000 char), headings (h1-h3),
  metaDescription, and top 30 navigation links
- Added screenshot capture via background script (CAPTURE_SCREENSHOT message)
- Added screenshot toggle in options page (disabled by default)
- Screenshots sent as multi-part content (text + image_url) to OpenRouter
- Updated ChatMessage content type to support ContentPart[] for multi-modal
- Added multi-step tool execution instructions to system prompt (rules 13-15)
- Added safety cap of 10 iterations to tool-calling loop
- Enhanced system prompt with page headings, meta description, and full text

--- a/src/options.html
+++ b/src/options.html
@@ -189,6 +189,14 @@
   </div>
 
   <div class="card">
+    <div class="card-title">Features</div>
+    <div class="form-group" style="display:flex;align-items:center;gap:8px;">
+      <input type="checkbox" id="screenshotToggle" style="width:auto;" />
+      <label for="screenshotToggle" style="margin-bottom:0;cursor:pointer;">Enable screenshot with AI messages</label>
+    </div>
+  </div>
+
+  <div class="card">
     <div class="card-title">About</div>
     <div class="about-text">
       <strong>MCP Inspector OpenRouter</strong><br>
