feat: AI Plan Mode + post-navigation re-scan
- Plan types (PlanStep, Plan, PlanStepStatus)
- Plan renderer with hierarchical step display and live status updates
- Post-navigation re-scan: after search/nav/form tools, waits for page load, re-fetches context + tools
- System prompt rules 16-20 for plan mode and post-navigation awareness
- Plan toggle button in chat header (auto + manual mode)
- Plan integration in tool loop: parse plan from AI, render in chat, update step status in real-time
- CSS for plan blocks with collapsible sections and animated spinner

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -77,6 +77,7 @@
       <select id="conversationSelect"></select>
       <button id="newChatBtn" class="icon-btn" title="New chat">＋</button>
       <button id="deleteChatBtn" class="icon-btn danger" title="Delete conversation">🗑</button>
+      <button id="plan-toggle" class="plan-mode-toggle icon-btn" title="Toggle plan mode">📋 Plan</button>
     </div>
 
     <!-- Chat bubbles -->
