fix: YOLO mode + chatbot scanner + tool result serialization
- YOLO mode: auto-execute all tools without confirmation (default: on), toggle in options
- Chatbot scanner: detects ChatGPT/Claude/Gemini/Grok input fields + send buttons
- Fix tool result [object Object] error: serialize non-string results with JSON.stringify
- Fix s.substring is not a function: ensure string before substring call

--- a/src/options.html
+++ b/src/options.html
@@ -191,6 +191,10 @@
   <div class="card">
     <div class="card-title">Features</div>
     <div class="form-group" style="display:flex;align-items:center;gap:8px;">
+      <input type="checkbox" id="yoloToggle" style="width:auto;" checked />
+      <label for="yoloToggle" style="margin-bottom:0;cursor:pointer;">⚡ YOLO Mode — auto-execute all tools without confirmation</label>
+    </div>
+    <div class="form-group" style="display:flex;align-items:center;gap:8px;">
       <input type="checkbox" id="screenshotToggle" style="width:auto;" />
       <label for="screenshotToggle" style="margin-bottom:0;cursor:pointer;">Enable screenshot with AI messages</label>
     </div>
