Convert tool bubbles to action steps and polish UI
Replace compact tool_* bubbles with unified action-step components (running/done/error) in ChatBubble, including human-friendly labels and result/argument summarization helpers. Merge consecutive tool_call + tool_result/tool_error messages in ChatContainer for a single resolved step and update tests accordingly. Simplify ChatInput (remove copy-trace / debug-download controls), adjust header to grouped actions with an advanced toggle event, and update sidebar advanced section markup and wiring. Add new sliders icon, tweak manifest/dashboard and tool-table button labels, and update onboarding copy. Large style overhaul: new theme tokens, glass/gradient visuals, revamped spacing, buttons, inputs, and action-step styles. Also add binary asset mcp-inspector-openrouter-extension.zip.

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -20,25 +20,22 @@
   <chat-header id="chatHeader"></chat-header>
   <onboarding-checklist id="onboardingChecklist"></onboarding-checklist>
   <section class="chat-advanced" id="chatAdvancedSection" hidden>
-    <details class="chat-advanced-details" id="chatAdvancedDetails">
-      <summary>Advanced settings</summary>
-      <div class="chat-advanced-body">
-        <div class="section-header-row">
-          <div class="lock-toggle">
-            <label class="toggle-switch">
-              <input type="checkbox" id="lockToggle">
-              <span class="toggle-slider"></span>
-            </label>
-            <span id="lockLabel" class="lock-label live">🔓 Ready</span>
-          </div>
+    <div class="chat-advanced-body" id="chatAdvancedDetails">
+      <div class="section-header-row">
+        <div class="lock-toggle">
+          <label class="toggle-switch">
+            <input type="checkbox" id="lockToggle" aria-labelledby="lockLabel">
+            <span class="toggle-slider"></span>
+          </label>
+          <span id="lockLabel" class="lock-label live">🔓 Ready</span>
         </div>
-        <status-bar id="statusBar"></status-bar>
-        <p>Site action manifest</p>
-        <manifest-dashboard id="manifestDashboard"></manifest-dashboard>
-        <p>Available actions</p>
-        <tool-table id="toolTable"></tool-table>
       </div>
-    </details>
+      <status-bar id="statusBar"></status-bar>
+      <p>Site action manifest</p>
+      <manifest-dashboard id="manifestDashboard"></manifest-dashboard>
+      <p>Available actions</p>
+      <tool-table id="toolTable"></tool-table>
+    </div>
   </section>
 
   <!-- Chat bubbles -->
